--- a/index.html
+++ b/index.html
@@ -1021,19 +1021,19 @@
                 <div class="certificate-item">
                     <div class="cert-icon">🔧</div>
                     <h3 class="cert-name">Cisco Junior Cybersecurity Career Path</h3>
-                    <p class="cert-status">In Progress (February 2025)</p>
+                    <p class="cert-status">Completed (February 2025)</p>
                 </div>
 
                 <div class="certificate-item">
                     <div class="cert-icon">🤖</div>
                     <h3 class="cert-name">IBM SkillsBuild AI Fundamentals</h3>
-                    <p class="cert-status">In Progress (February 2025)</p>
+                    <p class="cert-status">Completed (February 2025)</p>
                 </div>
 
                 <div class="certificate-item">
                     <div class="cert-icon">📋</div>
                     <h3 class="cert-name">CSC Certificate of Eligibility</h3>
-                    <p class="cert-status">In Progress (Started July 2024)</p>
+                    <p class="cert-status">Completed (Started July 2024)</p>
                 </div>
 
                 <div class="certificate-item">
