--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@
                     <div class="contact-item">
                         <div class="icon">📱</div>
                         <h3>Phone</h3>
-                        <p><a href="tel:+639915586396">Drop me a line</a></p>
+                        <p><a href="https://wa.me/639915586396">Drop me a line</a></p>
                     </div>
                     
                     <div class="contact-item">
