--- a/index.html
+++ b/index.html
@@ -61,9 +61,14 @@
                 <p class="text-lg md:text-xl text-gray-400 mb-8">
                     Crafting secure digital solutions with a focus on threat detection, vulnerability management, and robust security practices.
                 </p>
-                <a href="#contact" class="button-primary inline-block bg-gradient-to-r from-teal-500 to-cyan-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:shadow-2xl transition-all duration-300 transform">
-                    Let's Connect
-                </a>
+                <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
+                    <a href="#contact" class="button-primary inline-block bg-gradient-to-r from-teal-500 to-cyan-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:shadow-2xl transition-all duration-300 transform">
+                        Let's Connect
+                    </a>
+                    <a href="https://drive.google.com/file/d/1oZ50_GyRcYzvAHdXkhorX0duDL1YqrDc/view?usp=drive_link" target="_blank" class="button-primary inline-block bg-gray-700 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:shadow-2xl transition-all duration-300 transform">
+                        View Resume
+                    </a>
+                </div>
             </div>
         </section>
 
@@ -72,7 +77,7 @@
             <div class="container mx-auto max-w-4xl text-center">
                 <h2 class="text-4xl font-bold mb-4">About Me</h2>
                 <p class="text-gray-400 mb-8 max-w-2xl mx-auto">
-                    I am a dedicated professional actively transitioning into the dynamic fields of **cybersecurity** and **artificial intelligence**. My background in Marine Transportation has equipped me with strong discipline, problem-solving skills, and teamwork abilities, which I now apply to threat detection and information and communication technology (ICT). I'm passionate about building a career where I can contribute to securing digital environments and connecting with like-minded individuals.
+                    I am a dedicated professional actively transitioning into the dynamic fields of <strong>cybersecurity</strong> and <strong>artificial intelligence</strong>. My background in Marine Transportation has equipped me with strong discipline, problem-solving skills, and teamwork abilities, which I now apply to threat detection and information and communication technology (ICT). I'm passionate about building a career where I can contribute to securing digital environments and connecting with like-minded individuals.
                 </p>
             </div>
         </section>
@@ -83,29 +88,50 @@
                 <h2 class="text-4xl font-bold text-center mb-12">Key Projects and Skills</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Project Card 1: Security Auditing -->
-                    <div class="card bg-gray-800 rounded-lg p-6 shadow-xl border border-gray-700">
-                        <img src="https://placehold.co/600x400/2C5364/E0E0E0?text=Security+Auditing" alt="Security Auditing Project" class="rounded-lg mb-4">
-                        <h3 class="text-2xl font-semibold mb-2 text-white">Security Auditing & Compliance</h3>
-                        <p class="text-gray-400 text-sm">
-                            Conducted an internal IT audit for a fictional company (Botium Toys), assessing existing assets and identifying risks. Ensured compliance with security frameworks like **NIST CSF** to improve the overall security posture.
-                        </p>
+                    <div class="card bg-gray-800 rounded-lg p-6 shadow-xl border border-gray-700 flex flex-col justify-between">
+                        <div>
+                            <img src="https://placehold.co/600x400/2C5364/E0E0E0?text=Security+Auditing" alt="Security Auditing Project" class="rounded-lg mb-4">
+                            <h3 class="text-2xl font-semibold mb-2 text-white">Security Auditing & Compliance</h3>
+                            <p class="text-gray-400 text-sm">
+                                Conducted an internal IT audit for a fictional company (Botium Toys), assessing existing assets and identifying risks. Ensured compliance with security frameworks like <strong>NIST CSF</strong> to improve the overall security posture.
+                            </p>
+                        </div>
+                        <a href="https://docs.google.com/document/d/15x9gTQjgvgWN9MqjowLzgsEWUr8s6crkLIBbtmV__E0/edit?usp=sharing" target="_blank" class="mt-4 inline-block bg-gradient-to-r from-teal-500 to-cyan-600 text-white font-bold py-2 px-4 rounded-full text-sm hover:shadow-lg transition-all duration-300 self-start">
+                            View Project
+                        </a>
                     </div>
                     <!-- Project Card 2: Network Security -->
-                    <div class="card bg-gray-800 rounded-lg p-6 shadow-xl border border-gray-700">
-                        <img src="https://placehold.co/600x400/4B79A1/E0E0E0?text=Network+Analysis" alt="Network Analysis Project" class="rounded-lg mb-4">
-                        <h3 class="text-2xl font-semibold mb-2 text-white">Network Analysis & Incident Response</h3>
-                        <p class="text-gray-400 text-sm">
-                            Investigated and responded to network attacks, including **SYN floods**, by analyzing packet data with **Wireshark** and **tcpdump**. Identified affected protocols and implemented firewall rules to mitigate threats.
-                        </p>
+                    <div class="card bg-gray-800 rounded-lg p-6 shadow-xl border border-gray-700 flex flex-col justify-between">
+                        <div>
+                            <img src="https://placehold.co/600x400/4B79A1/E0E0E0?text=Network+Analysis" alt="Network Analysis Project" class="rounded-lg mb-4">
+                            <h3 class="text-2xl font-semibold mb-2 text-white">Network Analysis & Incident Response</h3>
+                            <p class="text-gray-400 text-sm">
+                                Investigated and responded to network attacks, including <strong>SYN floods</strong>, by analyzing packet data with <strong>Wireshark</strong> and <strong>tcpdump</strong>. Identified affected protocols and implemented firewall rules to mitigate threats.
+                            </p>
+                        </div>
+                        <a href="https://drive.google.com/drive/folders/1qt_43gywGmU6m3BPGB_eDTa46q2Sut9W?usp=drive_link" target="_blank" class="mt-4 inline-block bg-gradient-to-r from-teal-500 to-cyan-600 text-white font-bold py-2 px-4 rounded-full text-sm hover:shadow-lg transition-all duration-300 self-start">
+                            View Project
+                        </a>
                     </div>
                     <!-- Project Card 3: Threat Modeling -->
-                    <div class="card bg-gray-800 rounded-lg p-6 shadow-xl border border-gray-700">
-                        <img src="https://placehold.co/600x400/963B3B/E0E0E0?text=Threat+Modeling" alt="Threat Modeling Project" class="rounded-lg mb-4">
-                        <h3 class="text-2xl font-semibold mb-2 text-white">Threat Modeling & Vulnerability Assessment</h3>
-                        <p class="text-gray-400 text-sm">
-                            Applied the **PASTA framework** to threat model a mobile application, analyzing threats like SQL injection and proposing mitigations. Also investigated phishing emails and verified file integrity using cryptographic hashing.
-                        </p>
+                    <div class="card bg-gray-800 rounded-lg p-6 shadow-xl border border-gray-700 flex flex-col justify-between">
+                        <div>
+                            <img src="https://placehold.co/600x400/963B3B/E0E0E0?text=Threat+Modeling" alt="Threat Modeling Project" class="rounded-lg mb-4">
+                            <h3 class="text-2xl font-semibold mb-2 text-white">Threat Modeling & Vulnerability Assessment</h3>
+                            <p class="text-gray-400 text-sm">
+                                Applied the <strong>PASTA framework</strong> to threat model a mobile application, analyzing threats like SQL injection and proposing mitigations. Also investigated phishing emails and verified file integrity using cryptographic hashing.
+                            </p>
+                        </div>
+                        <a href="https://drive.google.com/drive/folders/1Y8BHU_mcRXK9VLvPo9lOfy_qbA0N88LD?usp=drive_link" target="_blank" class="mt-4 inline-block bg-gradient-to-r from-teal-500 to-cyan-600 text-white font-bold py-2 px-4 rounded-full text-sm hover:shadow-lg transition-all duration-300 self-start">
+                            View Project
+                        </a>
                     </div>
+                </div>
+                
+                <div class="flex justify-center mt-12">
+                    <a href="https://drive.google.com/drive/folders/1rsAyijGRZYHuaxnmfKQnbvguNBrU0E9r?usp=drive_link" target="_blank" class="button-primary inline-block bg-gradient-to-r from-teal-500 to-cyan-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:shadow-2xl transition-all duration-300 transform">
+                        View All Projects
+                    </a>
                 </div>
             </div>
         </section>
