--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
                     </a>
                 </div>
 
-                <form id="contactForm" class="space-y-6 animate-on-scroll">
+                <form id="contactForm" action="https://formspree.io/f/manpwdob" method="POST" class="space-y-6 animate-on-scroll">
                     <div>
                         <label for="name" class="block text-sm font-medium text-gray-300 mb-1">Name</label>
                         <input type="text" id="name" name="name" class="w-full p-3 rounded-md bg-gray-800 border border-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-cyan-500" required>
                     </div>
                     <div>
                         <label for="email" class="block text-sm font-medium text-gray-300 mb-1">Email</label>
-                        <input type="email" id="email" name="email" class="w-full p-3 rounded-md bg-gray-800 border border-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-cyan-500" required>
+                        <input type="email" id="email" name="_replyto" class="w-full p-3 rounded-md bg-gray-800 border border-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-cyan-500" required>
                     </div>
                     <div>
                         <label for="message" class="block text-sm font-medium text-gray-300 mb-1">Message</label>
@@ -221,15 +221,45 @@
     </footer>
 
     <script>
-        document.getElementById('contactForm').addEventListener('submit', function(event) {
+        // Formspree logic using Fetch API for seamless submission
+        const form = document.getElementById('contactForm');
+        const statusDiv = document.getElementById('status');
+
+        form.addEventListener('submit', async function(event) {
             event.preventDefault();
-            const statusDiv = document.getElementById('status');
-            statusDiv.textContent = 'Message sent! Thanks for reaching out.';
-            statusDiv.classList.add('text-green-400');
-            statusDiv.classList.remove('text-red-400');
-            this.reset();
+            statusDiv.textContent = 'Sending...';
+            statusDiv.classList.remove('text-green-400', 'text-red-400');
+
+            const data = new FormData(event.target);
+            try {
+                const response = await fetch(event.target.action, {
+                    method: form.method,
+                    body: data,
+                    headers: {
+                        'Accept': 'application/json'
+                    }
+                });
+                
+                if (response.ok) {
+                    statusDiv.textContent = 'Message sent! Thanks for reaching out.';
+                    statusDiv.classList.add('text-green-400');
+                    form.reset();
+                } else {
+                    const responseData = await response.json();
+                    if (responseData.errors) {
+                        statusDiv.textContent = responseData.errors.map(error => error.message).join(", ");
+                    } else {
+                        statusDiv.textContent = 'Oops! There was a problem sending your message.';
+                    }
+                    statusDiv.classList.add('text-red-400');
+                }
+            } catch (error) {
+                statusDiv.textContent = 'Oops! There was a problem sending your message.';
+                statusDiv.classList.add('text-red-400');
+            }
         });
 
+        // Smooth scrolling for navigation
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function(e) {
                 e.preventDefault();
